For some reason setting the baseline fixes incorrect horizontal alignment on mobile (when 1 column is empty)

--- a/blocks/init/src/blocks/components/header/header-style.scss
+++ b/blocks/init/src/blocks/components/header/header-style.scss
@@ -34,7 +34,7 @@ $header: (
 
   &__column {
     display: flex;
-    flex: 1 0 auto;
+    flex: 1 0 1px;
     position: relative;
 
     &--left {
